# Remplacer pulse_pyhocon par le nom du drop-in (ex. pulse_phonenumbers).
[package]
name = "pulse_pyhocon"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"          # aligner sur la licence (permissive) de la cible
description = "Drop-in Rust/PyO3 d'un sous-ensemble du hotspot de <cible> (axe B)"

[lib]
name = "_native"
crate-type = ["cdylib"]

# NB : `extension-module` n'est PAS activé ici (sinon `cargo test` ne lie pas libpython).
# maturin l'ajoute au build du wheel via pyproject.toml ([tool.maturin] features).
[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py311"] }

[profile.release]
lto = true
codegen-units = 1
