[package]
name = "pulse_pyhocon"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust/PyO3 core of pulse-pyhocon: native HOCON parser, iso drop-in for pyhocon"

[lib]
name = "_native"
crate-type = ["cdylib"]

# NB: `extension-module` is NOT enabled here (otherwise `cargo test` would not link libpython).
# maturin adds it for the wheel build via pyproject.toml ([tool.maturin] features).
[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py311"] }

[profile.release]
lto = true
codegen-units = 1
